@@ -56,8 +56,12 @@ schemas_DATA     = $(schemas_in_files:.schemas.in=.schemas)
 server_in_files = Themus_Component.server.in.in Themus_Properties_View.server.in.in
 serverdir = $(libdir)/bonobo/servers
 server_DATA = $(server_in_files:.server.in.in=.server)
-$(server_in_files:.server.in.in=.server.in): $(server_in_files)
-	sed -e "s|\@BONOBODIR\@|$(bonobodir)|" $< > $@
+
+Themus_Component.server.in: Themus_Component.server.in.in
+	sed -e "s|\@BONOBODIR\@|$(bonobodir)|" Themus_Component.server.in.in > Themus_Component.server.in
+
+Themus_Properties_View.server.in: Themus_Properties_View.server.in.in
+	sed -e "s|\@BONOBODIR\@|$(bonobodir)|" Themus_Properties_View.server.in.in > Themus_Properties_View.server.in
 
 CLEANFILES = Themus_Component.server Themus_Component.server.in Themus_Properties_View.server Themus_Properties_View.server.in
 
