@@ -1,3 +1,7 @@
+2003-06-15  Andrew Sobala  <aes@gnome.org>
+
+	* Makefile.am: fix server.in generation (fixes property page showing)
+
 2003-06-06  Andrew Sobala  <aes@gnome.org>
 
 	* theme-method.c: fix from Rajkumar Sivasamy (originally for control-
